Add support for ze_loader 1.9.4 and 1.5.8 API.

--- a/ze/ze_meta_parameters.yaml
+++ b/ze/ze_meta_parameters.yaml
@@ -225,6 +225,9 @@ meta_parameters:
     - [ OutArray, pTimestamps, pCount ]
   zeImageGetMemoryPropertiesExp:
     - [ OutScalar, pMemoryProperties ]
+  zeImageViewCreateExt:
+    - [ InScalar, desc ]
+    - [ OutScalar, phImageView ]
   zeImageViewCreateExp:
     - [ InScalar, desc ]
     - [ OutScalar, phImageView ]
