--- a/ze/zet_meta_parameters.yaml
+++ b/ze/zet_meta_parameters.yaml
@@ -16,6 +16,9 @@ meta_parameters:
   zetDebugGetRegisterSetProperties:
     - [ InOutScalar, pCount ]
     - [ OutArray, pRegisterSetProperties, pCount ]
+  zetDebugGetThreadRegisterSetProperties:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, pRegisterSetProperties, pCount ]
   zetMetricGroupGet:
     - [ InOutScalar, pCount ]
     - [ OutArray, phMetricGroups, pCount ]
