--- a/ze/zes_meta_parameters.yaml
+++ b/ze/zes_meta_parameters.yaml
@@ -1,5 +1,11 @@
 ---
 meta_parameters:
+  zesDriverGet:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phDrivers, pCount ]
+  zesDeviceGet:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phDevices, pCount ]
   zesDeviceGetProperties:
     - [ OutScalar, pProperties ]
   zesDeviceGetState:
@@ -16,6 +22,36 @@ meta_parameters:
     - [ OutArray, pProperties, pCount ]
   zesDevicePciGetStats:
     - [ OutScalar, pStats ]
+  zesDeviceGetOverclockDomains:
+    - [ OutScalar, pOverclockDomains ]
+  zesDeviceGetOverclockControls:
+    - [ OutScalar, pAvailableControls ]
+  zesDeviceReadOverclockState:
+    - [ OutScalar, pOverclockMode ]
+    - [ OutScalar, pWaiverSetting ]
+    - [ OutScalar, pOverclockState ]
+    - [ OutScalar, pPendingAction ]
+    - [ OutScalar, pPendingReset ]
+  zesDeviceEnumOverclockDomains:
+    - [ InOutScalar, pCount ]
+    - [ OutArray, phDomainHandle, pCount ]
+  zesOverclockGetDomainProperties:
+    - [ OutScalar, pDomainProperties ]
+  zesOverclockGetDomainVFProperties:
+    - [ OutScalar, pVFProperties ]
+  zesOverclockGetDomainControlProperties:
+    - [ OutScalar, pControlProperties ]
+  zesOverclockGetControlCurrentValue:
+    - [ OutScalar, pValue ]
+  zesOverclockGetControlPendingValue:
+    - [ OutScalar, pValue ]
+  zesOverclockSetControlUserValue:
+    - [ OutScalar, pPendingAction ]
+  zesOverclockGetControlState:
+    - [ OutScalar, pControlState ]
+    - [ OutScalar, pPendingAction ]
+  zesOverclockGetVFPointValues:
+    - [ OutScalar, PointValue ]
   zesDeviceEnumDiagnosticTestSuites:
     - [ InOutScalar, pCount ]
     - [ OutArray, phDiagnostics, pCount ]
@@ -65,6 +101,8 @@ meta_parameters:
     - [ OutScalar, pState ]
   zesFabricPortGetThroughput:
     - [ OutScalar, pThroughput ]
+  zesFabricPortGetFabricErrorCounters:
+    - [ OutScalar, pErrors ]
   zesDeviceEnumFans:
     - [ InOutScalar, pCount ]
     - [ OutArray, phFan, pCount ]
@@ -219,9 +257,13 @@ meta_parameters:
   zesPowerSetLimitsExt:
     - [ InScalar, pCount ]
     - [ InArray, pSustained, pCount ]
-  zesGetDriverProcAddrTable:
+  zesGetGlobalProcAddrTable:
     - [ OutScalar, pDdiTable]
   zesGetDeviceProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetDriverProcAddrTable:
+    - [ OutScalar, pDdiTable]
+  zesGetOverclockProcAddrTable:
     - [ OutScalar, pDdiTable]
   zesGetSchedulerProcAddrTable:
     - [ OutScalar, pDdiTable]
