--- a/ze/ze_events.yaml
+++ b/ze/ze_events.yaml
@@ -1,4 +1,13 @@
 ---
+lttng_ust_ze_sampling:
+  events:
+  - name: gpu_energy
+    args:
+    - [ ze_device_handle_t, hDevice ]
+    - [ uint64_t, energy ]
+    fields:
+    - [ ctf_integer_hex, uintptr_t, hDevice, "(uintptr_t)hDevice" ]
+    - [ ctf_integer, uint64_t, energy, "energy" ]
 lttng_ust_ze_profiling:
   events:
   - name: event_profiling
