--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -57,7 +57,6 @@ display_help() {
     echo "  --mangle                 Use mangled name"
     echo "  --metadata               Display metadata"
     echo "  --max-name-size <size>   Maximun size allowed for kernels names (default ${display_name_max_size_default})"
-    echo "  --live                   Don't store the trace and process on the fly"
     echo "  -v, --version            Print the version string"
     echo "  -r, --replay    [path]   <application> <application-arguments> will be traited as pathes to traces folders ($HOME/lttng-traces/...)"
     echo "                           If no arguments are provided, will use the latest trace available"
@@ -113,6 +112,18 @@ lazy_export() {
     if [ -z "${!1}" ]; then
          export "$1"="$2"
     fi
+}
+
+get_mpi_rank() {
+    # Get the RankID from different launcher
+    if [[ -v MPI_RANKID ]]; then
+         echo $MPI_RANKID
+    elif [[ -v PALS_RANKID ]]; then
+         echo $PALS_RANKID
+    else
+         echo -1
+    fi
+
 }
 
 bt2_all() {
@@ -179,32 +190,30 @@ trace_and_summary() {
     if [ "$#" -eq 0 ]; then
         display_help
     fi
-
+    MPI_RANK=$(get_mpi_rank)
+    export LTTNG_HOME=$HOME/.lttng_home_$MPI_RANK
+   
     mkdir -p ${LTTNG_HOME:-$HOME}
+    mkdir -p ${LTTNG_HOME2:-$HOME}/lttng-traces/running_trace/
+    # Make the muxer happy...
+    #sleep $MPI_RANK
     lttng-sessiond $quiet --daemonize
-    if [ -n "$live" ]; then
-        lttng $quiet create iprof --live
-    else
 <% if ["omp","ze","cuda","opencl"].all? { |l| languages.include?(l) } %>
-        THAPI_LTTNG_O=${LTTNG_HOME:-$HOME}/lttng-traces/iprof-$(date '+%Y%m%d-%H%M%S')
+    THAPI_LTTNG_O=${LTTNG_HOME2:-$HOME}/lttng-traces/iprof-$(date '+%Y%m%d-%H%M%S')
 <% elsif languages.include?("opencl") %>
-        THAPI_LTTNG_O=${LTTNG_HOME:-$HOME}/lttng-traces/thapi-opencl-session-$(date '+%Y%m%d-%H%M%S')
+    THAPI_LTTNG_O=${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-opencl-session-$(date '+%Y%m%d-%H%M%S')
 <% elsif languages.include?("ze") %>
-        THAPI_LTTNG_O=${LTTNG_HOME:-$HOME}/lttng-traces/thapi-ze-session-$(date '+%Y%m%d-%H%M%S')
+    THAPI_LTTNG_O=${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-ze-session-$(date '+%Y%m%d-%H%M%S')
 <% elsif languages.include?("cuda") %>
-        THAPI_LTTNG_O=${LTTNG_HOME:-$HOME}/lttng-traces/thapi-cuda-session-$(date '+%Y%m%d-%H%M%S')
+    THAPI_LTTNG_O=${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-cuda-session-$(date '+%Y%m%d-%H%M%S')
 <% end %>
-        lttng $quiet create -o $THAPI_LTTNG_O
+    if [ $MPI_RANK = -1 ]; then
+    	lttng $quiet create -o $THAPI_LTTNG_O
+    else
+        lttng $quiet create THAPI_$MPI_RANK -o ${LTTNG_HOME2:-$HOME}/lttng-traces/running_trace/$MPI_RANK
     fi
 
-    #Using blocking more to trace event record loss
-    if [ -n "$live" ]; then
-        lttng $quiet enable-channel --userspace --blocking-timeout=inf \
-                                    --tracefile-size=524288 --tracefile-count=32 \
-                                    blocking-channel
-    else
-        lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
-    fi
+    lttng $quiet enable-channel --userspace --blocking-timeout=inf blocking-channel
 <% if languages.include?("omp") %>
     lazy_export LTTNG_UST_OMP_INTEL 1
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ompt:*target*
@@ -278,36 +287,26 @@ trace_and_summary() {
 <% if languages.include?("cuda") %>
 <%= print_loader_logic("cuda","libcuda","libTracerCUDA")%>
 <% end %>
-    # Start collection
-    lttng $quiet start
-
+    lttng $quiet start THAPI_$MPI_RANK
     #Create the metadata.
     #read and dump `$LTTNG_UST_THAPI_METADATA` env
     $bindir/thapi_metadata
-
-    if [ -n "$live" ]; then
-        if [ -n "$trace" ]; then
-            bt2_all --live net://localhost/host/$(hostname)/iprof &
-        else
-            bt2_all --component=source.ctf.lttng-live \
-                    --params="inputs=[\"net://localhost/host/$(hostname)/iprof\"],
-                              session-not-found-action=end" &
-        fi
-        pid=$!
-    fi
-
     # Run the binary
     trap 'trace_epilogue' EXIT SIGABRT SIGSEGV
     "$@"
 }
 
 trace_epilogue() {
-    lttng $quiet stop
-    lttng $quiet destroy
-    if [ -n "$live" ]; then
-        wait $pid
-    else
+    lttng $quiet stop THAPI_$MPI_RANK
+    lttng $quiet destroy THAPI_$MPI_RANK
+    if [ $MPI_RANK = -1 ]; then
         summary
+    elif [ $MPI_RANK = 0 ]; then
+        while [ $(find $HOME/.lttng_home_*/ -maxdepth 1 -type f -name .lttngrc | wc -l) != 0 ]; do
+           sleep 1
+	done
+    	mv ${LTTNG_HOME2:-$HOME}/lttng-traces/running_trace $THAPI_LTTNG_O
+    	summary
     fi
 }
 
@@ -319,13 +318,13 @@ summary() {
         >&2 echo
     elif [ "$#" -eq 0 ]; then
 <% if ["omp","ze","cuda","opencl"].all? { |l| languages.include?(l) } %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME:-$HOME}/lttng-traces/iprof-* | head -1)
+        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/iprof-* | head -1)
 <% elsif languages.include?("opencl") %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME:-$HOME}/lttng-traces/thapi-opencl-session* | head -1)
+        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-opencl-session* | head -1)
 <% elsif languages.include?("ze") %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME:-$HOME}/lttng-traces/thapi-ze-session* | head -1)
+        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-ze-session* | head -1)
 <% elsif languages.include?("cuda") %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME:-$HOME}/lttng-traces/thapi-cuda-session* | head -1)
+        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-cuda-session* | head -1)
 <% end %>
         >&2 echo "Trace location:" $lttng_last_session
         >&2 echo
@@ -377,27 +376,27 @@ while (( "$#" )); do
         --max-name-size)        shift; display_name_max_size=$1; shift ;;
         --mangle)               shift; mangling=mangle ;;
         --debug)                shift; debug=true ;;
-        --live)                 shift; live=true ;;
         --)                     shift; break ;;
         *)                      break  ;;
     esac
 done
 
 if [ -n "$debug" ]; then
-    set -x
+    #set -x
 <% if languages.include?("ze") %>
-    export LTTNG_UST_ZE_VERBOSE=1
+    #export LTTNG_UST_ZE_VERBOSE=1
 <% end %>
 <% if languages.include?("opencl") %>
-    export LTTNG_UST_OPENCL_VERBOSE=1
+    #export LTTNG_UST_OPENCL_VERBOSE=1
 <% end %>
 <% if languages.include?("cuda") %>
-    export LTTNG_UST_CUDA_VERBOSE=1
+    #export LTTNG_UST_CUDA_VERBOSE=1
 <% end %>
 <% if languages.include?("omp") %>
-    export LTTNG_UST_OMP_VERBOSE=1
+    #export LTTNG_UST_OMP_VERBOSE=1
 <% end %>
-    export LIBBABELTRACE2_INIT_LOG_LEVEL=WARNING
+    #export LTTNG_UST_DEBUG=y
+    #export LIBBABELTRACE2_INIT_LOG_LEVEL=WARNING
     export BABELTRACE_CLI_LOG_LEVEL=WARNING
 else
     quiet="--quiet"
