--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -286,14 +286,15 @@ summary() {
         >&2 echo "Trace location:" $lttng_last_session
         >&2 echo
     elif [ "$#" -eq 0 ]; then
+        THAPI_OUTPUT=${LTTNG_HOME:-$HOME}    
 <% if ["omp","ze","cuda","cl"].all? { |l| languages.include?(l) } %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/iprof-* | head -1)
+        lttng_last_session=$(ls -dt ${THAPI_OUTPUT}/lttng-traces/iprof-* | head -1)
 <% elsif languages.include?("cl") %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-opencl-session* | head -1)
+        lttng_last_session=$(ls -dt ${THAPI_OUTPUT}/lttng-traces/thapi-opencl-session* | head -1)
 <% elsif languages.include?("ze") %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-ze-session* | head -1)
+        lttng_last_session=$(ls -dt ${THAPI_OUTPUT}/lttng-traces/thapi-ze-session* | head -1)
 <% elsif languages.include?("cuda") %>
-        lttng_last_session=$(ls -dt ${LTTNG_HOME2:-$HOME}/lttng-traces/thapi-cuda-session* | head -1)
+        lttng_last_session=$(ls -dt ${THAPI_OUTPUT}/lttng-traces/thapi-cuda-session* | head -1)
 <% end %>
         >&2 echo "Trace location:" $lttng_last_session
         >&2 echo
