--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -132,54 +132,51 @@ end
 comp_muxer = graph.add_component(utils_muxer, 'mux')
 
 # Other Comps
-serial_comps = case command
-               in 'trace'
+serial_comps = 
+case command
+in 'trace'
+  # Yaml and event_lambdas are required by babeltrace*_lib
+  $event_lambdas = {}
+  require 'yaml'
+  require 'babeltrace_omp_lib' if $options[:backends].include?('omp')
+  require 'babeltrace_opencl_lib' if $options[:backends].include?('cl')
+  require 'babeltrace_ze_lib' if $options[:backends].include?('ze')
+  require 'babeltrace_cuda_lib' if $options[:backends].include?('cuda')
 
-                 # Yaml and event_lambdas are required by babeltrace*_lib
-                 $event_lambdas = {}
-                 require 'yaml'
-                 require 'babeltrace_omp_lib' if $options[:backends].include?('omp')
-                 require 'babeltrace_opencl_lib' if $options[:backends].include?('cl')
-                 require 'babeltrace_ze_lib' if $options[:backends].include?('ze')
-                 require 'babeltrace_cuda_lib' if $options[:backends].include?('cuda')
-
-                 consume = lambda { |iterator, _|
-                   iterator.next_messages.each do |m|
-                     next unless m.type == :BT_MESSAGE_TYPE_EVENT
-
-                     e = m.event
-                     l = $event_lambdas[e.name]
-                     next unless l || !$options[:restrict]
-
-                     str = "#{Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime('%H:%M:%S.%9L')}"
-                     str << " - #{e.stream.trace.get_environment_entry_value_by_name('hostname')}" if $options[:context]
-                     if $options[:context]
-                       str << ' - ' << e.get_common_context_field.value.collect do |k, v|
-                         "#{k}: #{v}"
-                       end.join(', ')
-                     end
-                     str << " - #{e.name}: "
-                     str << (l ? l.call(e.payload_field.value) : e.payload_field.to_s)
-                     puts str
-                   end
-                 }
-                 graph.add_simple_sink('babeltrace_thapi', consume)
-
-               in 'tally'
-                 comp_intervals = interval_plugins.map.with_index do |comp, i|
-                   graph.add_component(comp, "interval_#{i}")
-                 end
-		 comp_tally = graph.add_component(sink_plugin, 'tally',
-						  params: $options_tally.transform_values { |_, v| v } )
-                 [comp_intervals, comp_tally]
-               in 'timeline'
-                 comp_intervals = interval_plugins.map.with_index do |comp, i|
-                   graph.add_component(comp, "interval_#{i}")
-                 end
-                 comp_timeline = graph.add_component(sink_plugin, 'timeline')
-                 # Chain the rest
-                 [comp_intervals, comp_timeline]
-               end
+  consume = lambda { |iterator, _|
+    iterator.next_messages.each do |m|
+      next unless m.type == :BT_MESSAGE_TYPE_EVENT
+      e = m.event
+      l = $event_lambdas[e.name]
+      next unless l || !$options[:restrict]
+      str = "#{Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime('%H:%M:%S.%9L')}"
+      str << " - #{e.stream.trace.get_environment_entry_value_by_name('hostname')}" if $options[:context]
+      if $options[:context]
+        str << ' - ' << e.get_common_context_field.value.collect do |k, v|
+          "#{k}: #{v}"
+        end.join(', ')
+      end
+      str << " - #{e.name}: "
+      str << (l ? l.call(e.payload_field.value) : e.payload_field.to_s)
+      puts str
+    end
+  }
+  graph.add_simple_sink('babeltrace_thapi', consume)
+in 'tally'
+  comp_intervals = interval_plugins.map.with_index do |comp, i|
+    graph.add_component(comp, "interval_#{i}")
+  end
+  comp_tally = graph.add_component(sink_plugin, 'tally',
+                                   params: $options_tally.transform_values { |_, v| v } )
+  [comp_intervals, comp_tally]
+in 'timeline'
+  comp_intervals = interval_plugins.map.with_index do |comp, i|
+    graph.add_component(comp, "interval_#{i}")
+  end
+  comp_timeline = graph.add_component(sink_plugin, 'timeline')
+  # Chain the rest
+  [comp_intervals, comp_timeline]
+end
 
 # Sources to muxer
 comp_sources.flat_map(&:output_ports).each_with_index do |op, i|
